--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node tests/test.js",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/SanketDobaria1/CampusCompass#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "mongodb": "^5.1.0",
     "mongoose": "^7.0.3"
   },
   "devDependencies": {
