--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/SanketDobaria1/CampusCompass#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "leaflet": "^1.9.3",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3"
   },
