--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/SanketDobaria1/CampusCompass#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.4",
     "leaflet": "^1.9.3",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3"
