--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
+    "express-session": "^1.17.3",
     "leaflet": "^1.9.3",
     "mongodb": "^5.1.0",
-    "mongoose": "^7.0.3"
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
