--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/SanketDobaria1/CampusCompass#readme",
   "dependencies": {
+    "@turf/turf": "^6.5.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
